# renderservice

./: .gitignore  README.md  config.ps1  config.xsdish  idb-2209959129.names  idb-819912824.names  idb-819912824.pickle  idb-export.py  idb-import.py  run_hook.ps1  run_renderservice.ps1  scene.xsdish  stop_renderservice.ps1  stuff.cpp
Scenes/: creature.xml  item.xml  m2.xml  map.xml  profilemain.xml  wmo.xml
frontend/: index.html  old_hook_frontend.htm  shitend-m2.html  shitend-wmo.html
frontend/css/: style.css
frontend/js/: render.js
hook/: CMakeLists.txt  asm_x64.hpp  blz_stl.hpp  common_types.hpp  hook.cpp  injector.cpp  patching.hpp  patching.ipp  renderservice.hpp
